Cargando Soporte Técnico

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 				</div>
 				<div class="content-card">
 					<div class="people">
-						<img src="img/people3.jpg" alt="">
+						<img src="img/yo.jpg" alt="">
 					</div>
 					<div class="texto-team">
 						<h4>Oscar   Javier Perez  Larios</h4>
