--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 				</div>
 				<div class="content-card">
 					<div class="people">
-						<img src="img/people2.jpg" alt="">
+						<img src="img/FullStack.JPG" alt="">
 					</div>
 					<div class="texto-team">
 						<h4>Miguel Angel Paredes Hernandez</h4>
@@ -101,9 +101,6 @@
 						<p>&#8226; Asesoría Remota o Presencial al Cliente.</p>
 						<p>&#8226; Respaldo De Información en la Nube.</p>
 						<p>&#8226; Asesoría de Paquetería MS Office.</p>
-						<p>&#8226; </p>
-						<p>&#8226; </p>
-
 					</div>
 				</div>
 			</div>
