--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width,user-scalable=no, initial-scale=1.0,maximun-scale=1.0,minimun-scale=1.0">
+	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Zero Zila - Desarrollando Ideas</title>
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
@@ -108,7 +108,7 @@
 		<section class="work contenedor" id="trabajo">
 			<h3>Nuestro Trabajo</h3>
 			<p class="after">Hacemos de algo simple algo extraordinario</p>
-			<div class="botonos-work">
+			<div class="botones-work">
 				<ul>
 					<li class="filter active" data-nombre='todos'>Todos</li>
 					<li class="filter" data-nombre='diseño'>Diseño</li>
@@ -206,5 +206,7 @@
 	</div>
 </footer>
 <script src="js/app.js"></script>
+<script src="js/jquery.js"></script>
+
 </body>
 </html>
