Se activo el preloader y sus modificaciones en el styles.css y javascript su activacion.

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body class="hidden">
 <!--SECCION DE PRECARGA-->
-	<!--<div class="centrado" id="onload">
+	<div class="centrado" id="onload">
 		<div class="lds-facebook"><div></div><div></div><div></div></div>
-	</div>-->
+	</div>
 	<header>
 		<!--Seccion de Barra de Navegacion-->
 		<nav id="nav" class="nav">
