--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
@@ -15,7 +15,7 @@
 	</div>
 	<header>
 		<!--Seccion de Barra de Navegacion-->
-		<nav id="nav" class="nav">
+		<nav id="nav" class="nav1">
 			<div class="contenedor-nav">
 				<div class="logo"> <img src="img/logo.jpg" alt=""></div>
 				<div class="enlaces" id="enlaces">
@@ -192,7 +192,7 @@
 			</div>
 		</section>
 	</main>
-<footer class="contacto">
+<footer id="contacto">
 	<div class="footer contenedor">
 		<div class="marca-logo">
 			<img src="img/logo.jpg" alt="">
@@ -205,8 +205,8 @@
 		<p>Lorem ipsum dolor sit amet, consectetur.</p>
 	</div>
 </footer>
-<script src="js/app.js"></script>
 <script src="js/jquery.js"></script>
-
+<script src="js/app.js"></script>
+<script src="js/filtro.js"></script>
 </body>
 </html>
